<resources>
    <string name="aa_albums">Albums</string>
    <string name="aa_album_most_played">Albums most played</string>
    <string name="aa_album_recently_added">Albums added</string>
    <string name="aa_artists">Artists</string>
    <string name="aa_home">Home</string>
    <string name="aa_made_for_you">For you</string>
    <string name="aa_more">More</string>
    <string name="aa_music_folder">Folder</string>
    <string name="aa_playlists">Playlists</string>
    <string name="aa_podcast">Podcast</string>
    <string name="aa_radio">Radio</string>
    <string name="aa_random">Random</string>
    <string name="aa_genres">Genres</string>
    <string name="aa_recent_albums">Recent</string>
    <string name="aa_song_recently_played">Tracks played</string>
    <string name="aa_starred">Starred</string>
    <string name="aa_starred_albums">★ Albums</string>
    <string name="aa_starred_artists">★ Artists</string>
    <string name="aa_starred_tracks">★ Tracks</string>
    <string name="aa_instant_mix">Instant mix</string>
    <string name="aa_view_by_albums">View by albums</string>
    <string name="aa_tracks">Tracks</string>
    <string name="aa_quick_mix">Quick mix</string>
    <string name="aa_my_mix">My mix</string>
    <string name="aa_discovery_mix">Discovery mix</string>
    <string name="activity_battery_optimizations_conclusion">If in trouble visit https://dontkillmyapp.com. It provides detailed instructions on how to disable any power-saving features that may affect app\'s performance.</string>
    <string name="activity_battery_optimizations_summary">Please disable battery optimizations for media playback while the screen is off.</string>
    <string name="activity_battery_optimizations_title">Battery Optimizations</string>
    <string name="activity_info_offline_mode">Offline mode</string>
    <string name="album_bottom_sheet_add_to_playlist">Add to playlist</string>
    <string name="album_bottom_sheet_add_to_queue">Add to queue</string>
    <string name="album_bottom_sheet_download_all">Download all</string>
    <string name="album_bottom_sheet_go_to_artist">Go to artist</string>
    <string name="album_bottom_sheet_instant_mix">Instant mix</string>
    <string name="album_bottom_sheet_play_next">Play next</string>
    <string name="album_bottom_sheet_remove_all">Remove all</string>
    <string name="album_bottom_sheet_share">Share</string>
    <string name="album_bottom_sheet_shuffle">Shuffle</string>
    <string name="album_catalogue_title">Albums</string>
    <string name="album_catalogue_title_expanded">Browse Albums</string>
    <string name="album_error_retrieving_artist">Error retrieving artist</string>
    <string name="album_list_page_downloaded">Downloaded albums</string>
    <string name="album_list_page_most_played">Most played albums</string>
    <string name="album_list_page_new_releases">New releases</string>
    <string name="album_list_page_recently_added">Recently added albums</string>
    <string name="album_list_page_recently_played">Recently played albums</string>
    <string name="album_list_page_starred">Starred albums</string>
    <string name="album_list_page_title">Albums</string>
    <string name="album_page_extra_info_button">More like this</string>
    <string name="album_page_play_button">Play</string>
    <string name="album_page_release_date_label">Released on %1$s</string>
    <string name="album_page_release_dates_label">Released on %1$s, originally %2$s</string>
    <string name="album_page_shuffle_button">Shuffle</string>
    <string name="album_page_tracks_count_and_duration">%1$d songs  •  %2$d minutes</string>
    <string name="app_name">Tempus</string>
    <string name="artist_adapter_radio_station_starting">Searching…</string>
    <string name="artist_bottom_sheet_instant_mix">Instant mix</string>
    <string name="artist_bottom_sheet_shuffle">Shuffle</string>
    <string name="artist_bottom_sheet_play_next">Play next</string>
    <string name="artist_bottom_sheet_add_to_queue">Add to queue</string>
    <string name="artist_bottom_sheet_add_to_playlist">Add to playlist</string>
    <string name="artist_bottom_sheet_loading_tracks">Loading tracks\u2026</string>
    <string name="artist_catalogue_title">Artists</string>
    <string name="artist_catalogue_title_expanded">Browse Artists</string>
    <string name="artist_error_retrieving_radio">Error retrieving artist\'s radio</string>
    <string name="artist_error_retrieving_tracks">Error retrieving artist\'s tracks</string>
    <string name="artist_list_page_downloaded">Downloaded artists</string>
    <string name="artist_list_page_starred">Starred artists</string>
    <string name="artist_list_page_title">Artists</string>
    <string name="artist_no_artist_info_toast">No additional artist info</string>
    <string name="artist_page_radio_button">Radio</string>
    <string name="artist_page_shuffle_button">Shuffle</string>
    <string name="artist_page_switch_layout_button">Switch layout</string>
    <string name="artist_page_title_album_more_like_this_button">More like this</string>
    <string name="artist_page_title_album_section">Albums</string>
    <string name="artist_page_title_ep_section">EPs</string>
    <string name="artist_page_title_single_section">Singles</string>
    <string name="artist_page_title_compilation_section">Compilations</string>
    <string name="artist_page_title_soundtrack_section">Soundtracks</string>
    <string name="artist_page_title_live_section">Lives</string>
    <string name="artist_page_title_remix_section">Remixes</string>
    <string name="artist_page_title_appears_on_section">Appears On</string>
    <string name="artist_page_title_biography_more_button">More</string>
    <string name="artist_page_title_biography_section">Biography</string>
    <string name="artist_page_title_most_streamed_song_section">Top Songs</string>
    <string name="artist_page_title_most_streamed_song_see_all_button">See all</string>
    <string name="artist_page_title_most_streamed_song_unavailable">No top songs available\n\nTap to hide</string>
    <string name="battery_optimization_negative_button">Ignore</string>
    <string name="battery_optimization_neutral_button">Don\'t ask again</string>
    <string name="battery_optimization_positive_button">Disable</string>
    <string name="bottom_sheet_generating_instant_mix">Generating instant mix...</string>
    <string name="bottom_sheet_problem_generating_instant_mix">Could not retrieve tracks from subsonic server.</string>
    <string name="connection_alert_dialog_negative_button">Cancel</string>
    <string name="connection_alert_dialog_neutral_button">Enable data saver</string>
    <string name="connection_alert_dialog_positive_button">OK</string>
    <string name="connection_alert_dialog_summary">Access to the Subsonic server on connections other than Wi-Fi has been restricted. To prevent this alert dialog from reappearing, disable the connection check in the app settings.</string>
    <string name="connection_alert_dialog_title">Wi-Fi not connected</string>
    <string name="content_description_shuffle_button">Shuffle</string>
    <string name="content_description_more_options">More options</string>
    <string name="delete_download_storage_dialog_negative_button">Cancel</string>
    <string name="delete_download_storage_dialog_positive_button">Continue</string>
    <string name="delete_download_storage_dialog_summary">Please be aware that continuing with this action will result in the permanent deletion of all saved items downloaded from all servers.</string>
    <string name="delete_download_storage_dialog_title">Delete saved items</string>
    <string name="description_empty_title">No lyrics available</string>
    <string name="disc_titlefull">Disc %1$s - %2$s</string>
    <string name="disc_titleless">Disc %1$s</string>
    <string name="download_directory_dialog_negative_button">Cancel</string>
    <string name="download_directory_dialog_positive_button">Download</string>
    <string name="download_directory_dialog_summary">All tracks in this folder will be downloaded. Tracks present in subfolders will not be downloaded.</string>
    <string name="download_directory_dialog_title">Download the tracks</string>
    <string name="download_directory_set">Set where music is downloaded</string>
    <string name="download_info_empty_subtitle">Once you download a song, you\'ll find it here</string>
    <string name="download_info_empty_title">No downloads yet!</string>
    <string name="download_item_multiple_subtitle_formatter">%1$s  •  %2$s items</string>
    <string name="download_item_single_subtitle_formatter">%1$s items</string>
    <string name="download_shuffle_all_subtitle">Shuffle all</string>
    <string name="download_storage_dialog_sub_summary">For the changes to take effect, restart the app.</string>
    <string name="download_storage_dialog_summary">Changing the destination of downloaded files from one storage to another will result in the immediate deletion of any previously downloaded files in the other storage.</string>
    <string name="download_storage_dialog_title">Select storage option</string>
    <string name="download_storage_external_dialog_positive_button">External</string>
    <string name="download_storage_internal_dialog_negative_button">Internal</string>
    <string name="download_storage_directory_dialog_neutral_button">Directory</string>
    <string name="download_title_section">Downloads</string>
    <string name="download_refresh_no_directory">Set a download folder to refresh your downloads.</string>
    <string name="download_refresh_no_changes">No missing downloads found.</string>
    <plurals name="download_refresh_removed">
        <item quantity="one">Removed %d missing download.</item>
        <item quantity="other">Removed %d missing downloads.</item>
    </plurals>
    <string name="library_title_album">Albums</string>
    <string name="library_title_artist">Artists</string>
    <string name="library_title_genre">Genres</string>
    <string name="library_title_playlist">Playlists</string>
    <string name="menu_download_label">Download</string>
    <string name="menu_filter_all">All</string>
    <string name="menu_home_label">Home</string>
    <string name="menu_library_label">Library</string>
    <string name="menu_search_button">Search</string>
    <string name="menu_settings_button">Settings</string>
    <string name="playback_speed_decrease_button_content_description">Decrease playback speed</string>
    <string name="playback_speed_increase_button_content_description">Increase playback speed</string>
    <string name="playback_speed_pitch_switch_title">Preserve pitch</string>
    <string name="playback_speed_manual_pitch_switch_title">Manual pitch</string>
    <string name="playback_speed_manual_pitch_decrease_button_content_description">Decrease manual pitch</string>
    <string name="playback_speed_manual_pitch_increase_button_content_description">Increase manual pitch</string>
    <string name="radio_editor_dialog_hint_homepage_url">Radio Homepage URL</string>
    <string name="radio_editor_dialog_hint_name">Radio Name</string>
    <string name="radio_editor_dialog_hint_stream_url">Radio Stream URL</string>
    <string name="radio_editor_dialog_negative_button">Cancel</string>
    <string name="radio_editor_source_label">Save to</string>
    <string name="radio_editor_source_server">Server</string>
    <string name="radio_editor_source_local">Local</string>
    <string name="radio_editor_dialog_hint_cover_art_url">Cover Art URL (optional)</string>
    <string name="radio_search_hint">Station name</string>
    <string name="radio_search_button">Search</string>
    <string name="radio_search_no_results">No stations found</string>
    <string name="radio_editor_search_directory">Search directory</string>
    <string name="radio_search_country_hint">Country</string>
    <string name="nav_drawer_index">Index</string>
</resources>