<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp">

    <TextView
        android:id="@+id/playback_speed_value_text_view"
        style="@style/TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/playback_speed_decrease_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/playback_speed_decrease_button_content_description"
            app:icon="@drawable/ic_minus" />

        <com.google.android.material.slider.Slider
            android:id="@+id/playback_speed_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:layout_marginEnd="-8dp"
            android:layout_weight="1"
            app:labelBehavior="floating" />

        <Button
            android:id="@+id/playback_speed_increase_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/playback_speed_increase_button_content_description"
            app:icon="@drawable/ic_add" />

    </LinearLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/playback_speed_pitch_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/playback_speed_pitch_switch_title" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/playback_speed_manual_pitch_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/playback_speed_manual_pitch_switch_title" />

    <LinearLayout
        android:id="@+id/playback_speed_manual_pitch_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/playback_speed_manual_pitch_value_text_view"
            style="@style/TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/playback_speed_manual_pitch_decrease_button"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playback_speed_manual_pitch_decrease_button_content_description"
                app:icon="@drawable/ic_minus" />

            <com.google.android.material.slider.Slider
                android:id="@+id/playback_speed_manual_pitch_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-8dp"
                android:layout_marginEnd="-8dp"
                android:layout_weight="1"
                app:labelBehavior="floating" />

            <Button
                android:id="@+id/playback_speed_manual_pitch_increase_button"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playback_speed_manual_pitch_increase_button_content_description"
                app:icon="@drawable/ic_add" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
